--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,66 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
-
-      - name: Lint with flake8 (optional)
-        run: |
-          pip install flake8
-          # Stop the build if there are Python syntax errors or undefined names
-          flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
-          # Exit-zero treats all errors as warnings
-          flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        continue-on-error: true
-
-      - name: Run tests with pytest
-        run: |
-          if [ -f pytest.ini ] || [ -d tests ]; then
-            pytest --verbose --cov=src --cov-report=xml --cov-report=term
-          else
-            echo "No tests found (tests/ or pytest.ini missing)."
-            echo "Skipping test execution."
-          fi
-        continue-on-error: true
-
-      - name: Upload coverage reports
-        uses: codecov/codecov-action@v3
-        if: matrix.python-version == '3.11'
-        with:
-          file: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-        continue-on-error: true
-
-      - name: Check code formatting with black (optional)
-        run: |
-          pip install black
-          black --check src || echo "Code formatting check failed, but continuing..."
-        continue-on-error: true
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -81,20 +24,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Verify package can be imported
+      - name: Run tests
         run: |
-          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
-          python -c "import sys; sys.path.insert(0, 'src'); from models.account_record import AccountRecord; print('✓ Import successful')"
-
-      - name: Create data directory
-        run: mkdir -p data
-
-      - name: Test database initialization
-        run: |
-          export PYTHONPATH="${PYTHONPATH}:$(pwd)/src"
-          python -c "
-          from data.data_manager import DataManager
-          dm = DataManager('data/test.db')
-          print('✓ Database initialized successfully')
-          dm.close()
-          "
+          pytest
